--- a/index.html
+++ b/index.html
@@ -119,13 +119,14 @@
       align-items:flex-start;
     }
     .logo{
-      width:92px;   /* výrazně větší */
-      height:92px;  /* výrazně větší */
-      flex: 0 0 92px;
+      width:118px;   /* výrazně větší */
+      height:118px;  /* výrazně větší */
+      flex: 0 0 118x;
       display:flex;
       align-items:center;
       justify-content:center;
       overflow:hidden; /* bez pozadí/rámečku */
+      margin-top:-4px;
     }
     .logo img{
       width:100%;
@@ -404,7 +405,7 @@
       .heroGrid{ grid-template-columns: 1fr; }
       header .wrap{ flex-direction: column; }
       .headerRight{ justify-content:flex-start; }
-      .logo{ width:74px; height:74px; flex-basis:74px; }
+      .logo{ width:92px; height:92px; flex-basis:92px; }
     }
   </style>
 </head>
