--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
   <div class="wrap">
     <div class="headerLeft">
       <div class="logo">
-        <img src="image/logo.png" alt="Logo" onerror="this.onerror=null;this.src='image/logo.jpg';" />
+        <img src="logo.png" alt="Logo" onerror="this.onerror=null;this.src='logo.jpg';" />
       </div>
       <div>
         <h1>ELO žebříček</h1>
